Further fixed styles in projects section. Text is generally smaller in mobile view, and spacing between elements is more appropriate

--- a/css/featured_project.css
+++ b/css/featured_project.css
@@ -1,5 +1,5 @@
-.featured-project-container {
-  /* padding: 0 10%; */
+.featured-project-container h3 {
+  margin-bottom: 0;
 }
 
 .featured-project-card {
@@ -33,12 +33,33 @@
   text-align: justify;
 }
 
+.featured-project-features {
+  margin-bottom: 0;
+}
+
 @media (max-width: 800px) {
-  .featured-project-container {
+  #projects-section .featured-project-container {
     padding: 0;
+    margin-top: 0 !important;
+  }
+
+  .featured-project-container li, .featured-project-container p, a {
+    font-size: 0.9rem;
   }
 
   .featured-project-image-container {
     min-width: 100%;
+  }
+
+  .featured-project-card-info-container > ul {
+    margin-top: -0.35rem;
+  }
+
+  .project-tech-stack-text {
+    font-size: 0.8rem;
+  }
+
+  .featured-project-container .featured-project-features-label {
+    font-size: 1rem;
   }
 }
